Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UEngine.h

	DOTNET_EXPORT auto E_PROP_UEngine_bIsInitialized_GET(UEngine* Ptr) { return Ptr->bIsInitialized; }
	DOTNET_EXPORT void E_PROP_UEngine_bIsInitialized_SET(UEngine* Ptr, bool Value) { Ptr->bIsInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_BSPSelectionHighlightIntensity_GET(UEngine* Ptr) { return Ptr->BSPSelectionHighlightIntensity; }
	DOTNET_EXPORT void E_PROP_UEngine_BSPSelectionHighlightIntensity_SET(UEngine* Ptr, float Value) { Ptr->BSPSelectionHighlightIntensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_CameraRotationThreshold_GET(UEngine* Ptr) { return Ptr->CameraRotationThreshold; }
	DOTNET_EXPORT void E_PROP_UEngine_CameraRotationThreshold_SET(UEngine* Ptr, float Value) { Ptr->CameraRotationThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_CameraTranslationThreshold_GET(UEngine* Ptr) { return Ptr->CameraTranslationThreshold; }
	DOTNET_EXPORT void E_PROP_UEngine_CameraTranslationThreshold_SET(UEngine* Ptr, float Value) { Ptr->CameraTranslationThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_ClientCycles_GET(UEngine* Ptr) { return Ptr->ClientCycles; }
	DOTNET_EXPORT void E_PROP_UEngine_ClientCycles_SET(UEngine* Ptr, int32 Value) { Ptr->ClientCycles = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_DisplayGamma_GET(UEngine* Ptr) { return Ptr->DisplayGamma; }
	DOTNET_EXPORT void E_PROP_UEngine_DisplayGamma_SET(UEngine* Ptr, float Value) { Ptr->DisplayGamma = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_FixedFrameRate_GET(UEngine* Ptr) { return Ptr->FixedFrameRate; }
	DOTNET_EXPORT void E_PROP_UEngine_FixedFrameRate_SET(UEngine* Ptr, float Value) { Ptr->FixedFrameRate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_GameCycles_GET(UEngine* Ptr) { return Ptr->GameCycles; }
	DOTNET_EXPORT void E_PROP_UEngine_GameCycles_SET(UEngine* Ptr, int32 Value) { Ptr->GameCycles = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_PrimitiveProbablyVisibleTime_GET(UEngine* Ptr) { return Ptr->PrimitiveProbablyVisibleTime; }
	DOTNET_EXPORT void E_PROP_UEngine_PrimitiveProbablyVisibleTime_SET(UEngine* Ptr, float Value) { Ptr->PrimitiveProbablyVisibleTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_RenderLightMapDensityColorScale_GET(UEngine* Ptr) { return Ptr->RenderLightMapDensityColorScale; }
	DOTNET_EXPORT void E_PROP_UEngine_RenderLightMapDensityColorScale_SET(UEngine* Ptr, float Value) { Ptr->RenderLightMapDensityColorScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_RenderLightMapDensityGrayscaleScale_GET(UEngine* Ptr) { return Ptr->RenderLightMapDensityGrayscaleScale; }
	DOTNET_EXPORT void E_PROP_UEngine_RenderLightMapDensityGrayscaleScale_SET(UEngine* Ptr, float Value) { Ptr->RenderLightMapDensityGrayscaleScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_SelectionHighlightIntensity_GET(UEngine* Ptr) { return Ptr->SelectionHighlightIntensity; }
	DOTNET_EXPORT void E_PROP_UEngine_SelectionHighlightIntensity_SET(UEngine* Ptr, float Value) { Ptr->SelectionHighlightIntensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_SelectionHighlightIntensityBillboards_GET(UEngine* Ptr) { return Ptr->SelectionHighlightIntensityBillboards; }
	DOTNET_EXPORT void E_PROP_UEngine_SelectionHighlightIntensityBillboards_SET(UEngine* Ptr, float Value) { Ptr->SelectionHighlightIntensityBillboards = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_SelectionMeshSectionHighlightIntensity_GET(UEngine* Ptr) { return Ptr->SelectionMeshSectionHighlightIntensity; }
	DOTNET_EXPORT void E_PROP_UEngine_SelectionMeshSectionHighlightIntensity_SET(UEngine* Ptr, float Value) { Ptr->SelectionMeshSectionHighlightIntensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_ShadedLevelColorationLitMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->ShadedLevelColorationLitMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_ShadedLevelColorationLitMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->ShadedLevelColorationLitMaterialName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_ShadedLevelColorationUnlitMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->ShadedLevelColorationUnlitMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_ShadedLevelColorationUnlitMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->ShadedLevelColorationUnlitMaterialName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_StreamingDistanceFactor_GET(UEngine* Ptr) { return Ptr->StreamingDistanceFactor; }
	DOTNET_EXPORT void E_PROP_UEngine_StreamingDistanceFactor_SET(UEngine* Ptr, float Value) { Ptr->StreamingDistanceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_TickCycles_GET(UEngine* Ptr) { return Ptr->TickCycles; }
	DOTNET_EXPORT void E_PROP_UEngine_TickCycles_SET(UEngine* Ptr, int32 Value) { Ptr->TickCycles = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_TransitionDescription_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->TransitionDescription); }
	DOTNET_EXPORT void E_PROP_UEngine_TransitionDescription_SET(UEngine* Ptr, char* Value) { Ptr->TransitionDescription = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_TransitionGameMode_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->TransitionGameMode); }
	DOTNET_EXPORT void E_PROP_UEngine_TransitionGameMode_SET(UEngine* Ptr, char* Value) { Ptr->TransitionGameMode = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorMaterialName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorViewModeMaterialName_AlphaAsColor_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorViewModeMaterialName_AlphaAsColor); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorViewModeMaterialName_AlphaAsColor_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorViewModeMaterialName_AlphaAsColor = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorViewModeMaterialName_BlueOnly_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorViewModeMaterialName_BlueOnly); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorViewModeMaterialName_BlueOnly_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorViewModeMaterialName_BlueOnly = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorViewModeMaterialName_ColorOnly_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorViewModeMaterialName_ColorOnly); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorViewModeMaterialName_ColorOnly_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorViewModeMaterialName_ColorOnly = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorViewModeMaterialName_GreenOnly_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorViewModeMaterialName_GreenOnly); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorViewModeMaterialName_GreenOnly_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorViewModeMaterialName_GreenOnly = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_VertexColorViewModeMaterialName_RedOnly_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->VertexColorViewModeMaterialName_RedOnly); }
	DOTNET_EXPORT void E_PROP_UEngine_VertexColorViewModeMaterialName_RedOnly_SET(UEngine* Ptr, char* Value) { Ptr->VertexColorViewModeMaterialName_RedOnly = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_WireframeMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->WireframeMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_WireframeMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->WireframeMaterialName = ConvertFromManage_FString(Value); }
	DOTNET_EXPORT auto E_UEngine_GetDynamicResolutionCurrentStateInfos(UEngine* Self, INT_PTR OutInfos)
	{
		auto _p0 = *(FDynamicResolutionStateInfos*)OutInfos;
		Self->GetDynamicResolutionCurrentStateInfos(_p0);
	}
	DOTNET_EXPORT auto E_UEngine_GetDynamicResolutionUserSetting(UEngine* Self)
	{
		return Self->GetDynamicResolutionUserSetting();
	}
	DOTNET_EXPORT auto E_UEngine_IsInitialized(UEngine* Self)
	{
		return Self->IsInitialized();
	}
	DOTNET_EXPORT auto E_UEngine_ParseCommandline(UEngine* Self)
	{
		Self->ParseCommandline();
	}
	DOTNET_EXPORT auto E_UEngine_PauseDynamicResolution(UEngine* Self)
	{
		Self->PauseDynamicResolution();
	}
	DOTNET_EXPORT auto E_UEngine_PreExit(UEngine* Self)
	{
		Self->PreExit();
	}
	DOTNET_EXPORT auto E_UEngine_RestoreSelectedMaterialColor(UEngine* Self)
	{
		Self->RestoreSelectedMaterialColor();
	}
	DOTNET_EXPORT auto E_UEngine_ResumeDynamicResolution(UEngine* Self)
	{
		Self->ResumeDynamicResolution();
	}
	DOTNET_EXPORT auto E_UEngine_SetDynamicResolutionUserSetting(UEngine* Self, bool Enable)
	{
		auto _p0 = Enable;
		Self->SetDynamicResolutionUserSetting(_p0);
	}
	DOTNET_EXPORT auto E_UEngine_ShutdownAudioDeviceManager(UEngine* Self)
	{
		Self->ShutdownAudioDeviceManager();
	}
	DOTNET_EXPORT auto E_UEngine_ShutdownHMD(UEngine* Self)
	{
		Self->ShutdownHMD();
	}
	DOTNET_EXPORT auto E_UEngine_Start(UEngine* Self)
	{
		Self->Start();
	}
	DOTNET_EXPORT auto E_UEngine_Tick(UEngine* Self, float DeltaSeconds, bool bIdleMode)
	{
		auto _p0 = DeltaSeconds;
		auto _p1 = bIdleMode;
		Self->Tick(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UEngine_WorldAdded(UEngine* Self, UWorld* World)
	{
		auto _p0 = World;
		Self->WorldAdded(_p0);
	}
	DOTNET_EXPORT auto E_UEngine_WorldDestroyed(UEngine* Self, UWorld* InWorld)
	{
		auto _p0 = InWorld;
		Self->WorldDestroyed(_p0);
	}